@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-04T01:05:19Z",
-  "count_outdated" : 548,
-  "uniques_outdated" : 374,
-  "count" : 553,
-  "uniques" : 379,
+  "timestamp" : "2025-07-06T01:11:54Z",
+  "count_outdated" : 549,
+  "uniques_outdated" : 375,
+  "count" : 554,
+  "uniques" : 380,
   "clones" : [
-    {
-      "timestamp": "2025-06-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-28T00:00:00Z",
       "count": 1,
@@ -34,6 +25,15 @@
     },
     {
       "timestamp": "2025-07-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
