@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2025-06-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-06-28T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2025-07-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
